Part01/1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  selector:
    app: pingpong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000 # The targetPort should match the containerPort in the deployment
